static/style/style.css
/* ... */
.carousel-inner {
	height: 100px;
}

.carousel-caption {
	color: #fff;
	top: 50%;
}

.carousel-background {
	/*background-image: url("../images/1.jpeg");*/
}

.checkbox {
	padding: 20px;
	font-size: 26px;
}

button {
	width: 35px;
	height: 35px;
	font-size: 0;
	background-color: red;
	border: 0;
	border-radius: 35px;
	margin: 18px;
	outline: none;
}

.notRec{
	background-color: darkred;
}

.Rec{
	animation-name: pulse;
	animation-duration: 1.5s;
	animation-iteration-count: infinite;
	animation-timing-function: linear;
}

@keyframes pulse{
	0%{
		box-shadow: 0px 0px 5px 0px rgba(173,0,0,.3);
	}
	65%{
		box-shadow: 0px 0px 5px 13px rgba(173,0,0,.3);
	}
	90%{
		box-shadow: 0px 0px 5px 13px rgba(173,0,0,0);
	}
}

